--- a/historia.html
+++ b/historia.html
@@ -233,8 +233,8 @@
 <footer>
   <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
   <nav class="social-icons" aria-label="Redes sociales">
-    <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-    <a href="#" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+ <a href="https://www.facebook.com/profile.php?id=100083546711527" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
+    <a href="https://wa.me/595984905269" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
   </nav>
 </footer>
 
