--- a/index.html
+++ b/index.html
@@ -77,27 +77,27 @@
     footer a:hover {
       color: #00ffc3 !important;
     }
+    .container,
+    .nav-container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 0 15px;
+    }
+
   </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="img/logo_sin_fondo.png" alt="Logo Cooperativa">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="menuNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="historia.html">Historia</a></li>
-        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="contacto.php">Contacto</a></li>
-      </ul>
-    </div>
+<nav>
+  <div class="nav-container">
+    <a href="index.html"><img src="img/logo_sin_fondo.png" alt="Logo Cooperativa" class="logo" /></a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="historia.html" class="active" aria-current="page">Historia</a></li>
+      <li><a href="servicios.html">Servicios</a></li>
+      <li><a href="contacto.php">Contacto</a></li>
+    </ul>
   </div>
 </nav>
 
@@ -105,7 +105,7 @@
 <div id="carruselEmpresa" class="carousel slide carousel-fade mb-4" data-bs-ride="carousel" data-bs-interval="5000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/servicio_cal.jpg" class="d-block w-100 carousel-img" alt="Logo">
+      <img src="img/oficina_central.jpg" class="d-block w-100 carousel-img" alt="Logo">
     </div>
     <div class="carousel-item">
       <img src="img/campo.jpg" class="d-block w-100 carousel-img" alt="Campo">
@@ -223,9 +223,8 @@
 <footer class="text-white text-center py-4 mt-5">
   <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
   <div class="d-flex justify-content-center gap-4">
-    <a href="#" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
-    <a href="#" class="text-white"><i class="bi bi-instagram fs-4"></i></a>
-    <a href="#" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=100083546711527" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
+    <a href="https://wa.me/595984905269" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
   </div>
 </footer>
 
