--- a/servicios.html
+++ b/servicios.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,7 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
-    /* Base and body */
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
@@ -18,7 +18,6 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
-
     nav {
       background: linear-gradient(90deg, #004d40, #00796b);
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
@@ -26,9 +25,7 @@
       position: sticky;
       top: 0;
       z-index: 1100;
-      transition: background-color 0.3s ease;
     }
-
     .nav-container {
       max-width: 1200px;
       margin: auto;
@@ -37,11 +34,9 @@
       align-items: center;
       flex-wrap: wrap;
     }
-
     .logo {
       height: 60px;
     }
-
     nav ul {
       list-style: none;
       display: flex;
@@ -49,7 +44,6 @@
       padding: 0;
       margin: 0;
     }
-
     nav a {
       color: #fff;
       font-weight: 600;
@@ -58,40 +52,23 @@
       padding: 8px 14px;
       border-radius: 8px;
       transition: background 0.3s ease, transform 0.3s ease;
-      white-space: nowrap;
     }
-
     nav a:hover, nav a.active {
       background-color: rgba(255, 255, 255, 0.25);
       transform: scale(1.05);
-      text-decoration: none;
     }
-
-    /* Header Section */
     header.page-header {
       padding: 4rem 2rem 2rem;
       text-align: center;
-      max-width: 900px;
+      max-width: 1000px;
       margin: 0 auto 3rem;
     }
-
     header.page-header h1 {
       font-size: 2.8rem;
       color: #00796b;
       font-weight: 700;
       letter-spacing: 0.05em;
-      text-shadow: 0 2px 6px rgba(0,121,107,0.3);
     }
-
-    header.page-header p {
-      font-size: 1.2rem;
-      color: #074d40;
-      margin-top: 1rem;
-      line-height: 1.5;
-      font-weight: 400;
-    }
-
-    /* Cards grid container */
     .cards-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -100,91 +77,31 @@
       margin: 0 auto 4rem;
       padding: 0 1rem;
     }
-
-    /* Card styling */
     .service-card {
       background: #fff;
       border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,121,107,0.15), inset 0 0 10px rgba(0,121,107,0.05);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 8px 20px rgba(0,121,107,0.15);
+      transition: transform 0.3s ease;
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      cursor: default;
     }
-
     .service-card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 20px 40px rgba(0,121,107,0.3), inset 0 0 15px rgba(0,121,107,0.10);
     }
-
     .service-card img {
       width: 100%;
-      object-fit: cover;
       height: 200px;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-      user-select: none;
-      pointer-events: none;
+      object-fit: cover;
     }
-
     .service-content {
-      padding: 1.8rem 1.6rem 2rem 1.6rem;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
+      padding: 1.5rem;
     }
-
-    .service-content h3 {
-      color: #00796b;
-      margin-bottom: 0.6rem;
-      font-weight: 700;
-      font-size: 1.4rem;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .service-content h3 i {
-      font-size: 1.5rem;
-      color: #004d40;
-      text-shadow: 0 0 5px rgba(0, 121, 107, 0.6);
-    }
-
-    .service-content p {
-      flex-grow: 1;
-      font-size: 1rem;
-      line-height: 1.5;
-      color: #3a3a3a;
-      margin-bottom: 1rem;
-      user-select: text;
-    }
-
-    /* Buttons and lists inside cards */
-    .service-content ul {
-      list-style: disc inside;
-      padding-left: 0;
-      margin: 0 0 0 1rem;
-      color: #00695c;
-      font-weight: 500;
-    }
-
-    /* Footer */
     footer {
       background-color: #2b6777;
       color: #fff;
       text-align: center;
       padding: 30px 15px;
-    }
-
-    /* Responsive tweaks */
-    @media (max-width: 600px) {
-      header.page-header h1 {
-        font-size: 2rem;
-      }
-      .service-card img {
-        height: 180px;
-      }
     }
   </style>
 </head>
@@ -204,12 +121,11 @@
 
 <header class="page-header" data-aos="fade-down" data-aos-duration="900">
   <h1>Servicios Profesionales</h1>
-  <p>Comprometidos con la excelencia, ofrecemos una amplia gama de servicios para nuestros socios y comunidad, con innovación y calidad.</p>
+  <p>Comprometidos con la excelencia, ofrecemos una amplia gama de servicios para nuestros socios y comunidad.</p>
 </header>
 
 <main class="cards-container">
-
-  <article class="service-card" data-aos="fade-up" data-aos-delay="100">
+    <article class="service-card" data-aos="fade-up" data-aos-delay="100">
     <img src="img/oficina_central.jpg" alt="Oficina Central de la Cooperativa" />
     <div class="service-content">
       <h3><i class="bi bi-building"></i>Oficina Central</h3>
@@ -298,23 +214,75 @@
       <p>Surtimos neumáticos, pinturas, cemento y más para obras con garantía de calidad y mejores precios.</p>
     </div>
   </article>
-
 </main>
+
+<section class="container mb-5">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2" data-aos="fade-up">
+      <h2 class="text-center mb-4">Agendar turno para créditos</h2>
+      <form action="agendar.php" method="post" class="bg-white p-4 rounded shadow">
+        <div class="mb-3">
+          <label class="form-label">Nombre:</label>
+          <input type="text" name="nombre" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Número de socio:</label>
+          <input type="text" name="socio" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Fecha deseada:</label>
+          <input type="date" name="fecha" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Hora:</label>
+          <input type="time" name="hora" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Comentario (opcional):</label>
+          <textarea name="comentario" class="form-control" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-success">Agendar Turno</button>
+        <div id="turno-exito" class="alert alert-success mt-3" style="display:none;"></div>
+      </form>
+    </div>
+  </div>
+</section>
 
 <footer>
   <p>© 2025 Cooperativa Pirapó Agrícola Ltda.</p>
   <nav class="social-icons" aria-label="Redes sociales">
-    <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-    <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-    <a href="#" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=100083546711527" class="text-white"><i class="bi bi-facebook fs-4"></i></a>
+    <a href="https://wa.me/595984905269" class="text-white"><i class="bi bi-whatsapp fs-4"></i></a>
   </nav>
 </footer>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({ once: true });
+
+  const turnoForm = document.querySelector('form[action="agendar.php"]');
+  const turnoExito = document.getElementById('turno-exito');
+
+  turnoForm?.addEventListener('submit', function(e) {
+    e.preventDefault();
+    const formData = new FormData(turnoForm);
+
+    fetch('agendar.php', {
+      method: 'POST',
+      body: formData
+    })
+    .then(res => res.text())
+    .then(data => {
+      turnoExito.textContent = data;
+      turnoExito.style.display = 'block';
+      turnoForm.reset();
+    })
+    .catch(error => {
+      turnoExito.textContent = 'Hubo un error al agendar el turno.';
+      turnoExito.style.display = 'block';
+    });
+  });
 </script>
 
 </body>
